--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ html {
     /* top: -2vh; */
 }
 
+#PortTex:visited {
+    color: #5C2B8C;
+}
+
+
 .LinkText a:hover {
     color: #F25D27;
 }
@@ -80,6 +85,10 @@ html {
 
 #PriceLinkID:hover {
     color: #F25D27;
+}
+
+#PriceLinkID:visited {
+    color: #5C2B8C;
 }
 
 .LinkText #PriceLink:hover {
