--- a/portStyles.css
+++ b/portStyles.css
@@ -36,6 +36,10 @@ body {
     color: #F25D27;
 }
 
+.HomeBut:visited {
+    color: #5C2B8C;
+}
+
 .HomeBut2 {
     color: #5C2B8C;
     font-family: "chorine-large", sans-serif;
@@ -49,6 +53,10 @@ body {
 
 .HomeBut2:hover {
     color: #F25D27;
+}
+
+.HomeBut2:visited {
+    color: #5C2B8C;
 }
 
 .shadowBox {
@@ -111,4 +119,3 @@ body {
     width: 31vw;
     top: 3vh;
 }
-
