--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,6 @@ html {
     margin: 0;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -52,6 +51,11 @@ html {
 
     z-index: 8;
 }
+
+.LinkText:visited {
+    color: #5C2B8C;
+}
+
 #PortTex {
     margin: auto;
     text-decoration: none;
@@ -59,42 +63,24 @@ html {
     height: auto;
     width: auto;
     left: 18.5vw;
-    /* top: -2vh; */
 }
 
-#PortTex:visited {
-    color: #5C2B8C;
-}
-
-
-.LinkText a:hover {
+.PortTexClass:hover {
     color: #F25D27;
 }
+
+.PriceLinkClass:hover {
+    color: #F25D27;
+}
+
 
 #PriceLinkID {
     margin: auto;
-    color: #5C2B8C;
     text-decoration: none;
     position: absolute;
-    /* height: auto;
-    width: auto; */
     right: 19vw;
-    /* top: -2vh; */
 
 }
-
-#PriceLinkID:hover {
-    color: #F25D27;
-}
-
-#PriceLinkID:visited {
-    color: #5C2B8C;
-}
-
-.LinkText #PriceLink:hover {
-    color: #F25D27;
-}
-
 
 
 
@@ -369,7 +355,6 @@ html {
     margin: auto;
     height: auto;
     width: auto;
-    /* text-align: center; */
     font-family: "chorine-large", sans-serif;
     font-size: var(--bigPara-Tex-Scaler);
     color: #FEFDFF;
@@ -393,7 +378,6 @@ html {
     margin: auto;
     height: auto;
     width: auto;
-    /* text-align: center; */
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: black;
     font-size: var(--redacted-Tex-Scaler);
