--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,11 @@ html {
     color: #5C2B8C;
 }
 
+.LinkText:hover {
+    color: #F25D27;
+}
+
+
 #PortTex {
     margin: auto;
     text-decoration: none;
