--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ html {
     z-index: 8;
 }
 
-/* .LinkText:visited {
+.LinkText:visited {
     color: #5C2B8C;
-} */
+}
 
 .LinkText:hover {
     color: #F25D27;
@@ -71,6 +71,10 @@ html {
 }
 
 .PortTexClass:hover {
+    color: #F25D27;
+}
+
+#PortTex:hover {
     color: #F25D27;
 }
 
